---
source: ferritin/src/tests.rs
expression: "render_for_tests_rooted(Commands::get(\"std\"), OutputMode :: TestMode, &\nget_fixture_crate_path ())"
---
<p>
Could not find 'std'</p>
<p>
Did you mean:</p>
<list>
  <item><p>
fixture-crate</p>
</item>
</list>
